tests/snapshots/compile_file__erased_dup.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/erased_dup.bend
---
@main = ({* a} a)
