tests/snapshots/compile_file__error_data_def_name.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/error_data_def_name.hvm
---
Errors:
Function 'A' has the same name as a previously defined constructor
