tests/snapshots/compile_file__error_messages.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/error_messages.bend
---
[4m[1m[31mErrors:[0m
[1mIn [4mtests/golden_tests/compile_file/error_messages.bend[0m[1m :[0m
[1mIn definition '[4mFoo[0m[1m':[0m
  Unbound constructor 'C' in pattern matching rule.
  Unbound constructor 'D' in pattern matching rule.
[1mIn definition '[4mFoo2[0m[1m':[0m
  Unbound constructor 'E' in pattern matching rule.
