tests/snapshots/compile_file__eta.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/eta.hvm
---
@main = (a a)

