tests/snapshots/compile_file__ex0.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/ex0.hvm
---
@9 = (a a)
@C_2 = ({2 (a b) (c a)} (c b))
@S = (a ((a b) (* b)))
@Z = (* @9)
@main = a
& (@S (@Z a)) ~ @C_2

