tests/snapshots/compile_file__ex2.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/ex2.hvm
---
@E = (* @G)
@F = (a a)
@G = (* @F)
@I = (a (* ((a b) (* b))))
@O = (a ((a b) (* (* b))))
@c2 = ({2 (a b) (c a)} (c b))
@dec = ((@decO (@decI (@E a))) a)
@decI = (a b)
& (a b) ~ @low
@decO = (a b)
& (c b) ~ @I
& (a c) ~ @dec
@low = ((@lowO (@lowI (@E a))) a)
@lowI = (a b)
& (c b) ~ @O
& (a c) ~ @I
@lowO = (a b)
& (c b) ~ @O
& (a c) ~ @O
@main = a
& (b a) ~ @run
& (@I (@E b)) ~ @c2
@run = ((@runO (@runI (@E a))) a)
@runI = (a b)
& (c b) ~ @run
& (d c) ~ @dec
& (a d) ~ @I
@runO = (a b)
& (c b) ~ @run
& (d c) ~ @dec
& (a d) ~ @O

